--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <title></title>
+  <meta name="description" content="Exo8 - Batteurs">
+  <title>Exo8 - Batteurs</title>
 </head>
 <body>
-  
+  <header>
+
+  </header>
+  <main>
+
+  </main>
+  <footer>
+    
+  </footer>
   <script src="./src/js/app.js" type="module"></script>
 </body>
 </html>
