--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
 </head>
 <body>
   <header>
-
+    <img src="./assets/img/les_batteurs.jpg" alt="">
+    <nav>
+      <ul>
+        <li><a href="">pop batteurs</a></li>
+        <li><a href="">batteries mystiques</a></li>
+        <li><a href="">batteurs geeks</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
 
   </main>
   <footer>
-    
+
   </footer>
   <script src="./src/js/app.js" type="module"></script>
 </body>
