code style and html top main

--- a/index.html
+++ b/index.html
@@ -1,29 +1,53 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Exo8 - Batteurs">
-  <title>Exo8 - Batteurs</title>
-</head>
-<body>
-  <header>
-    <img src="./assets/img/les_batteurs.jpg" alt="">
-    <nav>
-      <ul>
-        <li><a href="">pop batteurs</a></li>
-        <li><a href="">batteries mystiques</a></li>
-        <li><a href="">batteurs geeks</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-
-  </main>
-  <footer>
-
-  </footer>
-  <script src="./src/js/app.js" type="module"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Exo8 - Batteurs" />
+    <title>Exo8 - Batteurs</title>
+  </head>
+  <body>
+    <header>
+      <img src="./assets/img/les_batteurs.jpg" alt="" />
+      <nav>
+        <ul>
+          <li><a href="">pop batteurs</a></li>
+          <li><a href="">batteries mystiques</a></li>
+          <li><a href="">batteurs geeks</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="purple--container">
+        <div class="purple--wrapper">
+          <h1>
+            <span>les 3 meilleurs</span>
+            <span>batteurs du monde et</span>
+            <span>leurs solos</span>
+            <span>inoubliables</span>
+          </h1>
+          <hr class="dark--hr" />
+          <p>
+            Ils font palpiter la musique et les coeurs de ceux qui l'écoutent.
+            Les batteurs, traditionnellement installés à l'arrière de la scène,
+            sont pourtant l'essence même de la musique : le rythme. Un tempo qui
+            peut se faire très speed, très puissant dans les genres musicaux que
+            nous avons choisi d'aborder aujourd'hui : le rock, le hard rock et
+            leurs enfants. Voici notre sélection des meilleurs batteurs de tous
+            les temps. La liste ne peut être exhaustive, et si vous considérez
+            qu'elle peut-être améliorée, n'hésitez pas à nous signaler vos héros
+            des baguettes !
+          </p>
+          <picture>
+            <source srcset="./assets/img/drumrollin-desktop.jpg" media="(min-width: 765px)" type="image/jpg">
+            <source srcset="./assets/img/drumrollin-tablette.gif" media="(min-width: 575px)" alt="drumrollin">
+            <img src="./assets/img/drumrollin-mobile.jpg" alt="drumrollin">
+          </picture>
+        </div>
+      </div>
+    </main>
+    <footer></footer>
+    <script src="./src/js/app.js" type="module"></script>
+  </body>
 </html>
