--- a/index.html
+++ b/index.html
@@ -40,10 +40,34 @@
             des baguettes !
           </p>
           <picture>
-            <source srcset="./assets/img/drumrollin-desktop.jpg" media="(min-width: 765px)" type="image/jpg">
-            <source srcset="./assets/img/drumrollin-tablette.gif" media="(min-width: 575px)" alt="drumrollin">
-            <img src="./assets/img/drumrollin-mobile.jpg" alt="drumrollin">
+            <source
+              srcset="./assets/img/drumrollin-desktop.jpg"
+              media="(min-width: 765px)"
+              type="image/jpg"
+            />
+            <source
+              srcset="./assets/img/drumrollin-tablette.gif"
+              media="(min-width: 575px)"
+              alt="drumrollin"
+            />
+            <img src="./assets/img/drumrollin-mobile.jpg" alt="drumrollin" />
           </picture>
+          <article>
+            <h2>john bonham</h2>
+            <hr />
+            <p>
+              Un sacré bonhomme, ce Bonham. John Bonham, alias Bonzo, génie
+              enchaîné, déchaîné, à ses fûts, a fait les plus belles heures des
+              lives de "Led Zeppelin". Exemple, ce morceau de bravoure sur "Moby
+              Dick" au Royal Albert Hall en 1970. Sur cette performance purement
+              bluffante (mais juste à titre d’exemple !), il frappe même les
+              peaux à mains nues. Erigé au rang de "meilleur batteur de tous les
+              temps" par le lectorat de "Rolling Stone" en 1973, ce natif du
+              Worcestershire, mort à seulement 32 ans, reste une référence pour
+              tous les amateurs de (très) bonnes baguettes.
+            </p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/z_HWtzUHm6s" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+          </article>
         </div>
       </div>
     </main>
