--- a/index.html
+++ b/index.html
@@ -171,6 +171,64 @@
             ></iframe>
           </article>
         </div>
+        <aside>
+          <article>
+            <h3>Ginger Baker</h3>
+            <p>
+              Attention, culte. "Cream" qui outre un certain Eric Clapton et
+              Jack Bruce, tenait un sacré batteur en la personne de Ginger Baker
+              nous a légué "Sunshine of your love" (1977) où, sans doute,
+              l’homme derrière ses percussions, souvent novatrices pour
+              l’époque, était au sommet de son art. Le Britannique a ensuite
+              rejoint "Blind Faith" (toujours avec Clapton), puis créé la
+              formation de jazz-rock "Ginger Baker’s Air Force" et a notamment
+              collaboré avec Fela Kuti.
+            </p>
+            <iframe
+              src="https://www.youtube.com/embed/z_HWtzUHm6s"
+              title="YouTube video player"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </article>
+          <article>
+            <h3>Ringo Starr</h3>
+            <p>
+              Parmi les Fab Four, il n’est (tout étant relatif) certainement pas
+              le premier qui viendra à l’esprit du grand public, mais Ringo
+              Starr fut un sacrément bel atout du quatuor historique. Que
+              serait, par exemple, "Come together" sans son sens animal du tempo
+              ? Et l’on ne peut nier qu’il a contribué à l’évolution du style
+              des "Beatles".
+            </p>
+            <iframe
+              src="https://www.youtube.com/embed/z_HWtzUHm6s"
+              title="YouTube video player"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </article>
+          <article>
+            <h3>Dave Grohl</h3>
+            <p>
+              C'est pas drôle. Dave Grohl est si bien dans ses pompes de
+              musicien que, de retour de concert, il vous donne envie de brûler
+              vos instruments. Alors qu'il maîtrise déjà la guitare, la basse,
+              le piano et chante (tant qu'à faire...), il est avant tout reconnu
+              comme un batteur de folie. Cet autodidacte (du moins en ce qui
+              concerne les bases des percussions) ultra-doué a donné toute leur
+              puissance de feu à "Nirvana", "Queens of the stone age" ou encore
+              "Them crooked vultures" (passons sur ses nombreuses collaborations
+              et le fait qu'il a tout bêtement créé les "Foo fighters" !).
+            </p>
+            <iframe
+              src="https://www.youtube.com/embed/z_HWtzUHm6s"
+              title="YouTube video player"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </article>
+        </aside>
       </div>
     </main>
     <footer>
